# ShadowVolume

./: CMakeLists.txt  README.md
cmake/: target-link-libraries-linux.cmake
include/: base.h  camera.h  object.h  renderer.h  shader.h  text.h
shaders/: scene_shader.frag  scene_shader.vert  shadow_volume.geom
source/: camera.cpp  object.cpp  renderer.cpp  shader.cpp  text.cpp
